modify furniture fusion app

--- a/src/styles/4 - elements/_button.scss
+++ b/src/styles/4 - elements/_button.scss
@@ -89,6 +89,7 @@
 .button-small {
   font-size: $font-small;
   padding: $s-size $m-size;
+  border-radius: 15px;
 }
 .button-icon {
   display: flex;
