--- a/src/styles/5 - components/_banner.scss
+++ b/src/styles/5 - components/_banner.scss
@@ -5,6 +5,8 @@
    
     background: #f3f3f3;
     display: flex;
+    border-radius: 15px;
+
 
     @include mobile {
         height: auto;
@@ -41,11 +43,14 @@
     height: 100%;
     flex-basis: 50%;
     overflow: hidden;
+    border-radius: 15px;
 
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transform: translateX(5rem)
+        transform: translateX(5rem);
+        border-radius: 15px;
+
     }
 }
